# hasura-jwt-auth

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: build_and_test.yml  push-dockerhub.yaml
integration/: .eslintrc  databaseLifecycle.js  main.test.js  package-lock.json  package.json  startAuthServer.js  startServer.test.js  user.test.js  userWithOrg.test.js
integration/src/: hooks.test.js  logout.test.js  refresh.test.js  resetPassword.test.js  startServer.test.js  user.test.js  userWithOrg.test.js
integration/src/helpers/: getCookieValues.js  knexClient.js  startAuthServer.js  startMockServer.js
integration/utils/: databaseLifecycle.js  knexClient.js
migrations/: 20220427121112_init-user.sql  20220529164614_delete-old-tokens.sql  20220531173144_add-better-indexing.sql
src/: auth.rs  health.rs  main.rs  register.rs  response.rs  sign.rs  state.rs  user_org.rs
src/db/: init.rs  mod.rs  ready.rs  refresh_tokens.rs  reset_password.rs  users.rs
src/jwt/: mod.rs  refresh.rs  session.rs  token.rs
src/routes/: health.rs  live.rs  login.rs  logout.rs  mod.rs  ready.rs  refresh.rs  register.rs  reset_password.rs
