[package]
name = "hasura-jwt-auth"
version = "0.1.0"
authors = ["Tobias Lindström <me@tobiaslindstrom.se>"]
edition = "2018"

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "json", "uuid"] }
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
jwt-simple = "0.10.9"
bcrypt = "0.12"
surf = { version = "2.3.2", features = ["hyper-client"] }
curl = { version = "0.4.43", default-features = false, features = ["static-curl", "static-ssl", "http2"] }
serde_with = "1.14.0"
