[package]
name = "hasura-jwt-auth"
version = "0.1.2"
authors = ["Tobias Lindström <me@tobiaslindstrom.se>"]
edition = "2018"
repository = "https://github.com/TobiasL/hasura-jwt-auth"

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "json", "uuid"] }
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.14.0"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
jwt-simple = "0.10.9"
bcrypt = "0.12"
reqwest = { version = "0.11.12", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
